NetBSD Problem Report #57261

From www@netbsd.org  Tue Mar  7 04:53:44 2023
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8A9061A9239
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  7 Mar 2023 04:53:44 +0000 (UTC)
Message-Id: <20230307045343.63B441A923B@mollari.NetBSD.org>
Date: Tue,  7 Mar 2023 04:53:43 +0000 (UTC)
From: thorpej@me.com
Reply-To: thorpej@me.com
To: gnats-bugs@NetBSD.org
Subject: hppa should be converted to __HAVE_SYSCALL_INTERN so the #ifdef can be G/C'd
X-Send-Pr-Version: www-1.0

>Number:         57261
>Category:       port-hppa
>Synopsis:       hppa should be converted to __HAVE_SYSCALL_INTERN so the #ifdef can be G/C'd
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-hppa-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 07 04:55:00 +0000 2023
>Closed-Date:    Mon Apr 22 07:27:30 +0000 2024
>Last-Modified:  Mon Apr 22 07:27:30 +0000 2024
>Originator:     Jason Thorpe
>Release:        NetBSD-10
>Organization:
RISCy Business
>Environment:
NetBSD-10
>Description:
The hppa port appears to be the only one remaining to be switched over to __HAVE_SYSCALL_INTERN.  It should be converted to the conditional can be garbage-collected.
>How-To-Repeat:
N/A
>Fix:
Yes, please.

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57261 CVS commit: src/sys/arch/hppa
Date: Sun, 23 Jul 2023 10:09:37 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Sun Jul 23 10:09:37 UTC 2023

 Modified Files:
 	src/sys/arch/hppa/hppa: genassym.cf trap.S trap.c
 	src/sys/arch/hppa/include: proc.h types.h

 Log Message:
 PR/57261: hppa should be converted to __HAVE_SYSCALL_INTERN

 Provide syscall_intern and use the md_syscall in syscall trap handling.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/sys/arch/hppa/hppa/genassym.cf
 cvs rdiff -u -r1.74 -r1.75 src/sys/arch/hppa/hppa/trap.S
 cvs rdiff -u -r1.121 -r1.122 src/sys/arch/hppa/hppa/trap.c
 cvs rdiff -u -r1.14 -r1.15 src/sys/arch/hppa/include/proc.h
 cvs rdiff -u -r1.31 -r1.32 src/sys/arch/hppa/include/types.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Mon, 22 Apr 2024 07:27:30 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.